# elu4

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VISUALIZER.md  VISUALIZER_QUICK_START.md  hypercube.json  hypersphere.json  imgui.ini  run.sh  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: bed.json  closet.json  desk.json  gold_cube.json  hypercube.json  hypersphere.json  npc.json  plane.json  stool.json  tree.json  window.json
assets/fonts/: README.md
docs/: Vision.md
docs/levels/: 02-dodgeball.md  03-turn-and-face.md  04-third-person.md  05-leap.md  06-plane-3d-like.md  07-plane-4d-course.md  08-forest-fetch.md  09-maze.md  10-big-vista.md  README.md
objects/: build_tree.sh  hypercube.json  hypersphere.json  tree.json
packaging/: elu4.desktop
scenarios/: flat-horizon.scene  fps-look.scene  invariants.scene  left-right.scene
scripts/levels/: bigvista.lua  corridor.lua  dodgeball.lua  forest.lua  hello.lua  leap.lua  maze.lua  plane.lua  plane4d.lua  thirdperson.lua  turnface.lua
scripts/scenes/: anna.lua  bedroom.lua  hall.lua  neighbourhood.lua
shaders/: flat3d.frag  flat3d.vert  inner.frag  inner.vert  marker.frag  marker.vert  menubg.frag  menubg.vert  panel.frag  panel.vert  square.vert  visualizer.frag  visualizer.vert  wire.frag  wire.vert
src/: Asset.cpp  Asset.h  Camera.cpp  Camera.h  CameraWidget.h  GameState.h  HudWidgets.h  Level.h  Level2.cpp  Level2.h  LevelControls.h  LevelRegistry.cpp  LevelRegistry.h  Math4D.h  Menu.cpp  Menu.h  MenuBackground.cpp  MenuBackground.h  Minimap.cpp  Minimap.h  Object4D.cpp  Object4D.h  ObjectBuffer.cpp  ObjectBuffer.h  RenderSettings.h  Renderer.cpp  Renderer.h  SaveGame.cpp  SaveGame.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Tesseract.cpp  Tesseract.h  UiTheme.cpp  UiTheme.h  VR.cpp  VR.h  VRPanel.h  (+11 more)
src/levels/: BigVistaLevel.cpp  BigVistaLevel.h  CorridorLevel.cpp  CorridorLevel.h  DodgeballLevel.cpp  DodgeballLevel.h  ForestFetchLevel.cpp  ForestFetchLevel.h  LeapLevel.cpp  LeapLevel.h  Level4ThirdPerson.cpp  Level4ThirdPerson.h  MazeLevel.cpp  MazeLevel.h  PlaneLevel.cpp  PlaneLevel.h  PlaneLevel4D.cpp  PlaneLevel4D.h  ScriptedLevel.cpp  ScriptedLevel.h  StubLevel.cpp  StubLevel.h  TurnAndFaceLevel.cpp  TurnAndFaceLevel.h
src/lua/: LuaBindings.cpp  LuaBindings.h  lua_smoke.cpp
tests/: test_math4d.cpp
